--- a/src/components/wiggle/wiggle.css
+++ b/src/components/wiggle/wiggle.css
@@ -20,28 +20,17 @@
   transition: 0.93s cubic-bezier(0.52, 0.01, 0.16, 1) 0.87s;
 } 
 
-.navbar-wrapper[data-state="cv"] .navbar-title:nth-child(1) .wiggle, .navbar-wrapper[data-state="cv"] .navbar-title:nth-child(1) .wiggle::before, .navbar-wrapper[data-state="work"] .navbar-title:nth-child(2) .wiggle, .navbar-wrapper[data-state="work"] .navbar-title:nth-child(2) .wiggle::before, .navbar-wrapper[data-state="playground"] .navbar-title:nth-child(3) .wiggle, .navbar-wrapper[data-state="playground"]  .navbar-title:nth-child(3) .wiggle::before, .navbar-wrapper[data-state="work"] .navbar-title:nth-child(4) .wiggle, .navbar-wrapper[data-state="work"] .navbar-title:nth-child(4) .wiggle::before {
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-  transform: translateX(0);
-  will-change: transform;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-}
-
 .wiggle {
   display: block;
   bottom: 18px;
-  height: 6px;
+  height: 3px;
   left: 8%;
   overflow: hidden;
-  -webkit-transform: translateX(-7%);
-  -moz-transform: translateX(-7%);
-  -ms-transform: translateX(-7%);
-  -o-transform: translateX(-7%);
-  transform: translateX(17%);
+  -webkit-transform: translateX(-105%);
+  -moz-transform: translateX(-105%);
+  -ms-transform: translateX(-105%);
+  -o-transform: translateX(-105%);
+  transform: translateX(-105%);
   -webkit-transition: 0.45s cubic-bezier(0.52, 0.01, 0.16, 1);
   -moz-transition: 0.45s cubic-bezier(0.52, 0.01, 0.16, 1);
   transition: 0.45s cubic-bezier(0.52, 0.01, 0.16, 1);
@@ -49,42 +38,42 @@
   -webkit-backface-visibility: hidden;
 }
 
-.navbar-wrapper .navbar-title:nth-child(1) .wiggle {
+.nav .navbar-title:nth-child(1) .wiggle {
   width: var(--wiggleLength1);
 }
 
-.navbar-wrapper .navbar-title:nth-child(2) .wiggle {
+.nav .navbar-title:nth-child(2) .wiggle {
   width: var(--wiggleLength2);
 }
 
-.navbar-wrapper .navbar-title:nth-child(3) .wiggle {
+.nav .navbar-title:nth-child(3) .wiggle {
   width: var(--wiggleLength3);
 }
 
-.navbar-wrapper .navbar-title:nth-child(4) .wiggle {
+.nav .navbar-title:nth-child(4) .wiggle {
   width: var(--wiggleLength4);
 }
 
-.wiggle-link:hover .wiggle, .wiggle-link:hover .wiggle::before {
+.navbar-title:nth-child(1) .wiggle-link:hover .wiggle, .navbar-title:nth-child(1) .wiggle-link:hover .wiggle::before, .navbar-title:nth-child(2) .wiggle-link:hover .wiggle, .navbar-title:nth-child(2) .wiggle-link:hover .wiggle::before, .navbar-title:nth-child(3) .wiggle-link:hover .wiggle, .navbar-title:nth-child(3) .wiggle-link:hover .wiggle::before, .navbar-title:nth-child(4) .wiggle-link:hover .wiggle, .navbar-title:nth-child(4) .wiggle-link:hover .wiggle::before {
   -webkit-transform: translateX(0);
   -moz-transform: translateX(0);
   -ms-transform: translateX(0);
   -o-transform: translateX(0);
-  transform: translateX(0);
+  transform: translateX(0%);
 }
 
 .wiggle::before {
   content: '';
   position: absolute;
   top: 0;
-  left: 9%;
+  left: 0%;
   width: 100%;
   height: 100%;
-  -webkit-transform: translateX(-115%);
-  -moz-transform: translateX(-115%);
-  -ms-transform: translateX(-115%);
-  -o-transform: translateX(-115%);
-  transform: translateX(-115%);
+  -webkit-transform: translateX(105%);
+  -moz-transform: translateX(105%);
+  -ms-transform: translateX(105%);
+  -o-transform: translateX(105%);
+  transform: translateX(105%);
   -webkit-transition: 0.45s cubic-bezier(0.52, 0.01, 0.16, 1);
   -moz-transition: 0.45s cubic-bezier(0.52, 0.01, 0.16, 1);
   transition: 0.45s cubic-bezier(0.52, 0.01, 0.16, 1);
