--- a/src/containers/playground/playground.css
+++ b/src/containers/playground/playground.css
@@ -31,8 +31,9 @@ main.playground-wrapper-clicked {
 
 @media screen and (min-width: 1801px) {
   .playground-wrapper-padding {
-    padding: 5% 15% 5% 15%;
-  } 
+    padding: 14vw 15% 5vh 15%;
+  }
+
 }
 
 @media screen and (max-width: 768px) {
