--- a/src/containers/playground/playground.css
+++ b/src/containers/playground/playground.css
@@ -4,6 +4,21 @@ main.playground-bg{
   width: 100%;
   position: absolute;
   height: auto;
+  -webkit-animation: fadeIn 0.9s ease-in forwards;
+  -moz-animation: fadeIn 0.9s ease-in forwards;
+  -ms-animation: fadeIn 0.9s ease-in forwards;
+  -o-animation: fadeIn 0.9s ease-in forwards;
+  animation: fadeIn 0.9s ease-in forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 section.playground-wrapper{
