--- a/src/containers/work/work.css
+++ b/src/containers/work/work.css
@@ -6,6 +6,21 @@
 	/* background-image: url(./../../assets/images/desktop/work-background.jpg);
   background-size: cover; */
   background-color: #9657f0;
+  -webkit-animation: fadeIn 0.9s ease-in forwards;
+  -moz-animation: fadeIn 0.9s ease-in forwards;
+  -ms-animation: fadeIn 0.9s ease-in forwards;
+  -o-animation: fadeIn 0.9s ease-in forwards;
+  animation: fadeIn 0.9s ease-in forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 .work-wrapper-padding{
