--- a/src/containers/who/who.css
+++ b/src/containers/who/who.css
@@ -1,6 +1,170 @@
 .who-wrapper {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   background-color: #4779dd;
 }
+
+.first-section-text > *, .first-section-first-word-wrapper > * {
+  color: #fffade;
+}
+
+.who-wrapper-padding {
+  padding: 18vh 5vw 5vh 4.5vw;
+}
+
+.first-section-first-word-wrapper {
+  display: flex;
+  margin-bottom: -4vw;
+}
+
+.first-section-first-word-parenthesis-wrapper {
+  width: 40%;
+  display: contents;
+}
+
+.first-section-first-word-parenthesis {
+  margin: 0;
+  font-size: 8vw;
+}
+
+.first-section-first-word-parenthesis-text {
+  margin: 0;
+  font-size: 1vw;
+  position: relative;
+  text-align: center;
+  top: 2vw;
+}
+
+.first-section-container {
+  /* width: 100%;
+  height: 100vh; */
+  /* display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: flex-start; */
+}
+
+.first-section-text {
+  /* display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: flex-start;
+  align-items: flex-start; */
+  width: 50%;
+}
+
+.first-section-first-word, .first-section-second-word, .first-section-third-word, .first-section-fourth-word {
+  font-size: 8vw;
+  font-weight: 200;
+  margin-top: 0px;
+  margin-bottom:  -4vw;
+  padding: 0
+}
+
+.first-section-first-word {
+  padding-left: 3vw;
+}
+
+.first-section-second-word {
+  padding-left: 11vw;
+}
+
+.first-section-third-word {
+
+}
+
+.first-section-fourth-word {
+  padding-left: 1vw;
+}
+
+.first-section-title-wrapper {}
+
+.first-section-title {
+  font-size: 45px;
+  color: #4bdcd7;
+}
+
+.first-section-composing {
+  font-size: 25px;
+  font-weight: 400;
+}
+
+.first-section-gif-wrapper {
+  height: 14vw;
+  position: absolute;
+  right: 20%;
+  top: 30%;
+  transform: translate(50%, 10%);
+}
+
+.first-section-gif {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (min-width: 1801px) {
+  .who-wrapper-padding {
+    padding: 14vw 15% 5vh 15%;
+  }
+
+  .first-section-title {
+    font-size: 3.1vw;
+  }
+
+  .first-section-composing {
+    font-size: 1.6vw;
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .first-section-title {
+    font-size: 45px;
+  }
+
+  .first-section-composing {
+    /* font-size: 22px; */
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .first-section-title {
+    font-size: 4.5vw;
+  }
+
+  .first-section-composing {
+    font-size: 2.2vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .who-wrapper-padding {
+    padding: 16vh 5vw 5vh 6.5vw;
+  }
+}
+
+@media screen and (max-width: 591px) {
+  .first-section-title {
+    font-size: 7.2vw;
+  }
+
+  .first-section-composing {
+    font-size: 3.6vw;
+  }
+}
+
+@media screen and (max-width: 478px) {
+  .first-section-title {
+    font-size: 7.5vw;
+  }
+
+  .first-section-composing {
+    font-size: 3.7vw;
+  }
+}
+  
+  
+
