--- a/src/containers/who/section-two/sectionTwo.css
+++ b/src/containers/who/section-two/sectionTwo.css
@@ -26,11 +26,12 @@
   flex-wrap: wrap;
   flex-direction: row;
   margin-top: 7vw;
+  position: relative;
+  overflow: hidden;
 }
 
 .skill-link {
-  display: inline-block;
-  text-align: justify;
+  cursor: pointer;
 }
 
 .skill-link:hover, .skill-title:hover {
@@ -40,4 +41,48 @@
 .skill-title {
   margin: 0;
   color: #2d5eac;
+}
+
+/* === MODAL BEGIN === */
+.modal {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #2d5eac;
+  left: -150vw;
+  transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.modal.show {
+  left: 0;
+}
+
+.close {
+  cursor: pointer;
+  position: absolute;
+  top: 60px;
+  right: 60px;
+  border: 0;
+  transform: rotate(90deg);
+}
+
+.close:hover {
+  right: 80px;
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal-skill-title {
+  color: #fffade;
+  padding-left: 6vw;
+}
+.modal-skill-description {
+  font-size: 2vw;
+  padding-left: 6vw;
 }
