--- a/src/containers/who/section-two/sectionTwo.css
+++ b/src/containers/who/section-two/sectionTwo.css
@@ -17,7 +17,7 @@
 
 .skills-body {
   font-size: 3.5vw;
-  line-height: 1.4;
+  line-height: 1.6;
   font-weight: 500;
   display: flex;
   justify-content: space-between;
@@ -93,4 +93,57 @@
 .modal-skill-description {
   font-size: 2vw;
   padding: 0 6vw 0 6vw;
+}
+
+@media screen and (max-width: 769px) {
+  .skills-body {
+    font-size: 30px;
+    line-height: 50px;
+    letter-spacing: 0px;
+  }
+
+  .skill-title {
+    color: #fffade;
+  }
+
+  .modal-skill-description {
+    margin-bottom: 0px;
+    font-size: 16px;
+    line-height: 1.4;
+  }
+
+  .close:hover {
+    padding-top: 0;
+    padding-bottom: 2vw;
+  }
+
+  .close {
+    top: 5vw;
+    right: 9vw;
+  }
+
+  .svg-inline--fa {
+    height: 1.5em;
+  }
+}
+
+@media screen and (max-width: 591px) {
+  .skills-body {
+    line-height: 48px;
+    letter-spacing: 0px;
+  }
+}
+
+@media screen and (max-width: 478px) {
+  .skills-body {
+    font-size: 28px;
+    line-height: 45px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .skills-body {
+    font-size: 25px;
+    line-height: 42px;
+  }
 }
