--- a/src/components/arrow-link/arrowLink.css
+++ b/src/components/arrow-link/arrowLink.css
@@ -17,6 +17,57 @@
   max-width: 100%;
 }
 
+.who-arrow:hover {
+  -webkit-animation-iteration-count: 0;
+  animation-iteration-count: 0;
+}
+
+.bounce {
+	-webkit-animation: bounce 2s;
+	animation: bounce ease-in-out 2s;
+	-webkit-animation-iteration-count: infinite;
+	animation-iteration-count: infinite;
+  animation-delay: 2s;
+}
+
+@-webkit-keyframes bounce {
+	0%,
+	25%,
+	50%,
+	75%,
+	100% {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
+	40% {
+		-webkit-transform: translateY(-20px);
+		transform: translateY(-20px);
+	}
+	60% {
+		-webkit-transform: translateY(-12px);
+		transform: translateY(-12px);
+	}
+}
+
+@keyframes bounce {
+	0%,
+	25%,
+	50%,
+	75%,
+	100% {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
+	40% {
+		-webkit-transform: translateY(-20px);
+		transform: translateY(-20px);
+	}
+	60% {
+		-webkit-transform: translateY(-12px);
+		transform: translateY(-12px);
+	}
+}
+
 @media screen and (min-width: 1801px) {
   .who-link {
     right: 14%;
