added social media on who screen

--- a/src/containers/who/who.css
+++ b/src/containers/who/who.css
@@ -9,9 +9,23 @@
   padding: 18vh 5vw 5vh 4.5vw;
 }
 
+.social-media-who-wrapper {
+  position: relative;
+  right: -4vw;
+  bottom: -220px;
+}
+
 @media screen and (min-width: 1801px) {
   .who-wrapper-padding {
     padding: 14vw 15% 5vh 15%;
+  }
+
+  .social-media-who-wrapper {
+    padding: 2% 7% 2% 0;
+  }
+
+  .social-media-who-wrapper {
+    right: -9vw;
   }
 }
 
@@ -26,6 +40,11 @@
 @media screen and (max-width: 768px) {
   .who-wrapper-padding {
     padding: 16vh 5vw 5vh 6.5vw;
+  }
+
+  .social-media-who-wrapper {
+    bottom: -150px;
+    right: -6vw;
   }
 }
 
