--- a/src/containers/who/section-two/sectionTwo.css
+++ b/src/containers/who/section-two/sectionTwo.css
@@ -1,6 +1,6 @@
 .second-section-container {
   width: 100%;
-  height: 90vh;
+  min-height: 90%;
 }
 
 .second-section-head-title > *, .second-section-wrapper > *, .skills-body {
@@ -93,6 +93,12 @@
 .modal-skill-description {
   font-size: 2vw;
   padding: 0 6vw 0 6vw;
+}
+
+@media screen and (min-width: 1801px) {
+  .skills-body {
+    font-size: 3.2vw;
+  }
 }
 
 @media screen and (max-width: 769px) {
